--- a/src/noise.mtd.in
+++ b/src/noise.mtd.in
@@ -1,7 +1,7 @@
 [node @PREFIX@fractal]
    maya.classification STRING "utility/noise"
    maya.id INT 0x001165FC
-   maya.name STRING @FRACTAL_MAYA_NODENAME@
+   maya.name STRING "@FRACTAL_MAYA_NODENAME@"
 
    desc STRING "Fractal Noise"
    
@@ -111,7 +111,7 @@
 [node @PREFIX@distort_point]
    maya.classification STRING "utility/noise"
    maya.id INT 0x001165FD
-   maya.name STRING @DISTORTPOINT_MAYA_NODENAME@
+   maya.name STRING "@DISTORTPOINT_MAYA_NODENAME@"
    
    [attr input]
       linkable BOOL false
@@ -155,7 +155,7 @@
 [node @PREFIX@voronoi]
    maya.classification STRING "utility/noise"
    maya.id INT 0x001165FE
-   maya.name STRING @VORONOI_MAYA_NODENAME@
+   maya.name STRING "@VORONOI_MAYA_NODENAME@"
    
    [attr input]
       linkable BOOL false
