--- a/maya/DistortPointTemplate.py.in
+++ b/maya/DistortPointTemplate.py.in
@@ -1,4 +1,4 @@
-import pymel.core as pm
+import maya.mel
 from mtoa.ui.ae.shaderTemplate import ShaderAETemplate
 
 class AE@DISTORTPOINT_MAYA_NODENAME@Template(ShaderAETemplate):
@@ -24,7 +24,7 @@ class AE@DISTORTPOINT_MAYA_NODENAME@Template(ShaderAETemplate):
       self.endLayout()
       self.endLayout()
       
-      pm.mel.AEdependNodeTemplate(self.nodeName)
+      maya.mel.eval('AEdependNodeTemplate '+self.nodeName)
       self.addExtraControls()
       self.endScrollLayout()
 
