--- a/maya/FractalTemplate.py.in
+++ b/maya/FractalTemplate.py.in
@@ -1,4 +1,4 @@
-import pymel.core as pm
+import maya.mel
 from mtoa.ui.ae.shaderTemplate import ShaderAETemplate
 
 class AE@FRACTAL_MAYA_NODENAME@Template(ShaderAETemplate):
@@ -55,7 +55,7 @@ class AE@FRACTAL_MAYA_NODENAME@Template(ShaderAETemplate):
       
       self.endLayout()
       
-      pm.mel.AEdependNodeTemplate(self.nodeName)
+      maya.mel.eval('AEdependNodeTemplate '+self.nodeName)
       self.addExtraControls()
       self.endScrollLayout()
 
