--- a/maya/VoronoiTemplate.py.in
+++ b/maya/VoronoiTemplate.py.in
@@ -1,4 +1,4 @@
-import pymel.core as pm
+import maya.mel
 from mtoa.ui.ae.shaderTemplate import ShaderAETemplate
 
 class AE@VORONOI_MAYA_NODENAME@Template(ShaderAETemplate):
@@ -19,7 +19,7 @@ class AE@VORONOI_MAYA_NODENAME@Template(ShaderAETemplate):
       self.addControl("seed")
       self.endLayout()
       
-      pm.mel.AEdependNodeTemplate(self.nodeName)
+      maya.mel.eval('AEdependNodeTemplate '+self.nodeName)
       self.addExtraControls()
       self.endScrollLayout()
 
